k8s/02-k8s-kubeadm/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
    containers:
      - name: nginx
        image: nginx:1.29.4-alpine
        ports:
          - containerPort: 80
